--- a/nais/alerterator-dev.yml
+++ b/nais/alerterator-dev.yml
@@ -47,7 +47,7 @@ spec:
             summary: "Følgende request feilet: `Status \{{ $labels.status }} - \{{ $labels.method }} \{{ $labels.route }}`.\n
                         Grunn:\n ```\{{ $labels.problem_details }}```\n
                         Sjekk loggene for å se hvorfor dette feiler."
-            action: "`kubectl logs \{{ $labels.kubernetes_pod_name }} -n \{{ $labels.kubernetes_namespace }} -c \{{ $labels.app }}`"
+            action: "`kubectl logs \{{ $labels.pod }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
           labels:
             namespace: {{namespace}}
             severity: danger
@@ -60,26 +60,17 @@ spec:
             summary: "Følgende request feilet: `Status \{{ $labels.status }} - \{{ $labels.method }} \{{ $labels.route }}`.\n
                         Grunn:\n ```\{{ $labels.problem_details }}```\n
                         Sjekk loggene for å se hvorfor dette feiler."
-            action: "`kubectl logs \{{ $labels.kubernetes_pod_name }} -n \{{ $labels.kubernetes_namespace }} -c \{{ $labels.app }}`"
+            action: "`kubectl logs \{{ $labels.pod }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
           labels:
             namespace: {{namespace}}
             severity: danger
-
-        - alert: Høy andel HTTP klientfeil (4xx responser)
-          severity: danger
-          expr: floor(increase(http_server_requests_seconds_count{status=~"4.*", status!~"404|401|403|451", app="{{app}}"}[3m])) > 0
-          for: 1m
-          description: "Følgende request feilet: `Status \{{ $labels.status }} - \{{ $labels.method }} \{{ $labels.route }}`.\n
-                    Grunn:\n ```\{{ $labels.problem_details }}```\n
-                    Sjekk loggene for å se hvorfor dette feiler"
-          action: "`kubectl logs \{{ $labels.kubernetes_pod_name }} -n \{{ $labels.kubernetes_namespace }} -c \{{ $labels.app }}`"
 
         - alert: Konsumering av meldinger feiler
           expr: ceil(increase(spring_kafka_listener_seconds_count{result="failure", app="{{app}}"}[3m])) > 0
           for: 1m
           annotations:
             summary: "Konsumering av melding i \{{ $labels.name }} feiler. Sjekk loggene for å finne ut hvorfor dette feiler."
-            action: "`kubectl logs \{{ $labels.pod_name }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
+            action: "`kubectl logs \{{ $labels.pod }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
           labels:
             namespace: {{namespace}}
             severity: danger
@@ -89,7 +80,7 @@ spec:
           for: 2m
           annotations:
             summary: "Sjekk loggene for å se hvorfor helsesjekken feiler.`"
-            action: "`kubectl logs \{{ $labels.kubernetes_pod_name }} -n \{{ $labels.kubernetes_namespace }} -c \{{ $labels.app }}`"
+            action: "`kubectl logs \{{ $labels.pod }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
           labels:
             namespace: {{namespace}}
             severity: danger
