Bruker unik transaction-id-prefix pga. flere instanser.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -178,7 +178,7 @@ kafka:
       client-id: ${HOSTNAME}
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      transaction-id-prefix: .tx-
+      transaction-id-prefix: .tx-${HOSTNAME}-
       retries: 3
 
 springdoc:
