Legger til alert for publisering av meldinger.

--- a/nais/alerterator-prod.yml
+++ b/nais/alerterator-prod.yml
@@ -71,6 +71,16 @@ spec:
             namespace: {{namespace}}
             severity: danger
 
+        - alert: Publisering av meldinger feiler
+          expr: ceil(increase(spring_kafka_template_seconds_count{result="failure", app="{{app}}"}[3m])) > 0
+          for: 1m
+          annotations:
+            summary: "Publisering av melding med \{{ $labels.name }} feiler med  \{{ $labels.exception }}. Sjekk loggene for å finne ut hvorfor dette feiler."
+            action: "`kubectl logs \{{ $labels.pod }} -n \{{ $labels.namespace }} -c \{{ $labels.app }}`"
+          labels:
+            namespace: {{namespace}}
+            severity: danger
+
         - alert: Helsesjekk feiler
           expr: floor(increase(http_server_requests_seconds_count{status!~"200", uri="/actuator/health", app="{{app}}"}[3m])) > 0
           for: 2m
