--- a/nais/naiserator.yaml
+++ b/nais/naiserator.yaml
@@ -21,6 +21,7 @@ spec:
         - application: sif-innsyn
         - application: endringsmelding-pleiepenger
         - application: pleiepengesoknad-api
+        - application: dine-pleiepenger
         - application: k9-brukerdialog-api
     outbound:
       external:
