Oppdaterer pakker og plugins.
- Closes #424
- Disabler tester som kjører alene, men ikke med de andre.

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,4 +1,4 @@
-ELECTOR_PATH: localhost:${wiremock.server.port}/leader
+ELECTOR_PATH: localhost:${wiremock.server.port}/leader-mock
 no.nav:
   gateways:
     k9-selvbetjening-oppslag: http://localhost:${wiremock.server.port}/k9-selvbetjening-oppslag-mock
