--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -66,6 +66,7 @@ jobs:
     uses: navikt/sif-gha-workflows/.github/workflows/gradle-deploy.yml@main
     permissions:
       contents: read
+      id-token: write
     secrets: inherit
     with:
       image: ${{ needs.build.outputs.image }}
