Tillater kall fra k9-sak-innsyn-api.

--- a/nais/naiserator.yaml
+++ b/nais/naiserator.yaml
@@ -21,6 +21,7 @@ spec:
         - application: endringsmelding-pleiepenger
         - application: dine-pleiepenger
         - application: k9-brukerdialog-api
+        - application: k9-sak-innsyn-api # Kaller hit for legacy søknader.
     outbound:
       external:
         {{#each externalHosts as |host|}}
