Legger på autoInstrumentation.

--- a/nais/naiserator.yaml
+++ b/nais/naiserator.yaml
@@ -71,6 +71,10 @@ spec:
   prometheus:
     enabled: true
     path: /metrics
+  observability:
+    autoInstrumentation:
+      enabled: {{observabilityEnabled}}
+      runtime: java
   env:
   {{#each env}}
    - name: {{@key}}
