Slå på logging til både elastic og loki

--- a/nais/naiserator.yaml
+++ b/nais/naiserator.yaml
@@ -76,6 +76,10 @@ spec:
     enabled: true
     path: /metrics
   observability:
+    logging:
+      destinations:
+        - id: loki
+        - id: elastic
     autoInstrumentation:
       enabled: {{observabilityEnabled}}
       runtime: java
